--- a/style.css
+++ b/style.css
@@ -225,6 +225,10 @@ header {
 .remove-item-btn:hover{
     background-color:#751f1f;
 }
+.remove-item-btn:active{
+    background-color: #3d0f0f; 
+    transform:scale(0.9);
+}
 .total-price{
     font-size:20px;
     font-weight:bold;
