--- a/style.css
+++ b/style.css
@@ -256,11 +256,20 @@ header {
 @media (max-width: 600px) {
     .cart-item {
         flex-direction: column;
-        align-items: flex-start;
+        align-items:center;
         width: auto;
+        justify-content: center;
     }
     .cart-item img {
         max-width: 100%;
         margin-bottom: 10px;
     }
+    .carti-container {
+        justify-content: center;
+    }
+    .cart-total{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+}
 }
